--- a/typst.toml
+++ b/typst.toml
@@ -1,18 +1,15 @@
 # for a description of available keys, see https://github.com/typst/packages/?tab=readme-ov-file#package-format
 
 [package]
-name = ""
+name = "vienna-tech"
 version = "0.1.0"
 entrypoint = "src/lib.typ"
-authors = []
+authors = ["Niko Pikall"]
 license = "Unlicense"
-description = ""
-homepage = ""
-repository = ""
-keywords = []
-categories = []
-disciplines = []
-compiler = ""
+description = "An unofficial template for writing thesis at the TU Wien civil- and environmental engineering faculty."
+repository = "https://github.com/npikall/vienna-tech.git"
+keywords = ["thesis", "tuw", "TU Wien", "civil engineering", "environmental engineering"]
+categories = ["thesis", "education"]
 exclude = [
 	".github",
 	"docs",
@@ -22,9 +19,9 @@ exclude = [
 	"Justfile",
 ]
 
-# [template]
-# path = "template"
-# entrypoint = "main.typ"
+[template]
+path = "template"
+entrypoint = "main.typ"
 # thumbnail = "thumbnail.png"
 
 # [tool.mytool]
