--- a/typst.toml
+++ b/typst.toml
@@ -22,7 +22,7 @@ exclude = [
 [template]
 path = "template"
 entrypoint = "main.typ"
-# thumbnail = "thumbnail.png"
+thumbnail = "thumbnail.png"
 
 # [tool.mytool]
 # foo = "bar"
