--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Package and push to registry repo
 on:
   push:
-    branches: [ main ]
-    # tags: [ v* ]
+    # branches: [ main ]
+    tags: [ v* ]
 
 env:
   # the repository to which to push the release version
