--- a/typst.toml
+++ b/typst.toml
@@ -5,7 +5,8 @@ name = "vienna-tech"
 version = "1.0.0"
 entrypoint = "src/lib.typ"
 authors = ["Niko Pikall"]
-license = "Unlicense"
+license = "MIT License"
+compiler = "0.13"
 description = "An unofficial template for writing thesis at the TU Wien civil- and environmental engineering faculty."
 repository = "https://github.com/npikall/vienna-tech.git"
 keywords = ["thesis", "tuw", "TU Wien", "civil engineering", "environmental engineering"]
